@@ -18,6 +18,7 @@ const IGNORED_CURL_CONSTANTS = [
     'CURLOPT_PROGRESSDATA',
     'CURLOPT_XFERINFODATA',
     'CURLOPT_PREREQDATA',
+    'CURLOPT_DEBUGDATA',
 ];
 
 const IGNORED_PHP_CONSTANTS = [
